@@ -5,7 +5,7 @@ verifSuccess=Cette signature est valide. Elle appartient à
 cryptFailed=Erreur inconnue. Le chiffrement a échoué.
 decryptFailed=Erreur inconnue. Le déchiffrement a échoué.
 decryptFailedPassword=Le déchiffrement a échoué car le mot de passe est incorrect.
-passwordDialogEnterPrivateKey=Entrez votre clé privée :
+passwordDialogEnterPrivateKey=Entrez votre le mot de passe de votre clé privée :
 youMustEnterPassword=Vous devez entrer un mot de passe !
 choosePublicKeyTitle=FireGPG - clé publique
 choosePublicKeyDescription=Choisissez la clé publique :
